# second-brain

./: .dockerignore  .env.example  .eslintrc.json.bak  .gitignore  .prettierignore  ARCHITECTURE.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/ai/: .env.example  Dockerfile  README.md  config.py  extractors.py  main.py  package.json  pyproject.toml  schemas.py  service.py
apps/ai/tests/: test_api.py  test_chunking.py  test_extractors.py
apps/api/: .env.example  Dockerfile  README.md  eslint.config.mjs  package.json  tsconfig.json  tsconfig.spec.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  app.resolver.ts  main.ts  schema.gql
apps/api/src/activity/: activity.controller.ts  activity.module.ts
apps/api/src/agent/: agent-router.service.spec.ts  agent-router.service.ts  agent.controller.ts  agent.module.ts  agent.service.ts  execution.service.spec.ts  execution.service.ts  llm-reasoner.service.ts  memory.service.spec.ts  memory.service.ts  task-planner.service.spec.ts  task-planner.service.ts
apps/api/src/ai/: ai.controller.ts  ai.module.ts  ai.service.spec.ts  ai.service.ts
apps/api/src/audit/: audit.controller.ts  audit.module.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
apps/api/src/chat/: chat.controller.ts  chat.module.ts  chat.service.spec.ts
apps/api/test/: jest-e2e.json
apps/web/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json
docker/: nginx.conf
scripts/: dev.mjs
(+288 files in other folders)
