[project]
name = "ai"
version = "0.1.0"
description = "FastAPI AI service for AI Second Brain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "langchain>=0.2.0",
    "llama-index>=0.10.0",
    "openai>=1.30.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1"
]
