[project]
name = "ai"
version = "0.1.0"
description = "FastAPI AI service for Second Brain — text extraction, chunking, embeddings, search, and AI generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.13",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "youtube-transcript-api>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
